# zilvar

./: .gitignore  Cargo.toml  README.md
infrastructure/: README.md  zilvar.service
src/: cyklobazar_scraper.rs  db.rs  main.rs  model.rs  notification.rs  persistence.rs
