[package]
name = "cyklobazar-cz-doggo"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = "0.12.15"
scraper = "0.23.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "sqlx-sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
