[package]
name = "cyklobazar-cz-doggo"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
jiff = { version = "0.2.13", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
